Add thing to add score to all selected teams

--- a/static/admin.html
+++ b/static/admin.html
@@ -53,6 +53,9 @@
 		<button type="submit">Add team</button>
 	</form>
 	<div id="teams"></div>
-	
+	<form method="POST" action="/scores">
+		<input name="amount" placeholder="Amount">
+		<button type="submit">Add this amount to all selected teams</button>
+	</form>
 </body>
 </html>
