Don't use dashes while displaying team scores

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
 					if ( json[i].emphasis ) {
 						el.classList = 'emphasis';
 					}
-					el.innerHTML = json[i].name + " - " + json[i].score;
+					el.innerHTML = json[i].name + ": " + json[i].score;
 					teamsEl.appendChild(el);
 				}
 
