Add style changes that are not color. Add logos.

--- a/static/index.html
+++ b/static/index.html
@@ -48,6 +48,11 @@
 	</script>
 </head>
 <body>
+	<div id="logos">
+		<img src="images/STALOGO.alpha.png">
+		<br/>
+		<img src="images/Ml_logo_vector.svg">
+	</div>
 	<div id="question">question</div>
 	<div id="answer">answer</div>
 	<ol id="teams">
